--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.3.0",
+    "@clerk/themes": "^2.1.19",
+    "@radix-ui/react-label": "^2.1.0",
+    "@tabler/icons-react": "^3.12.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.3.21",
+    "framer-motion": "^11.3.24",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.4.0"
+    "react-element-to-jsx-string": "^15.0.0",
+    "tailwind-merge": "^2.5.1"
   },
   "devDependencies": {
     "@types/node": "^20",
