--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-element-to-jsx-string": "^15.0.0",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.2",
-    "zustand": "^5.0.0-rc.2"
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
