--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "framer-motion": "^11.3.27",
     "lucide-react": "^0.462.0",
     "mini-svg-data-uri": "^1.4.4",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.2",
     "next": "14.2.5",
     "openai": "^4.62.1",
     "react": "^18",
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
     "react-icons": "^5.3.0",
+    "stripe": "^17.5.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.1"
