--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "dev:ngrok": "concurrently \"next dev\" \"ngrok http 3000\""
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.0",
@@ -20,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "concurrently": "^9.1.1",
     "framer-motion": "^11.3.27",
     "lucide-react": "^0.462.0",
     "mini-svg-data-uri": "^1.4.4",
