--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-element-to-jsx-string": "^15.0.0",
     "react-icons": "^5.3.0",
     "stripe": "^17.5.0",
+    "svix": "^1.45.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.1"
