--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
     "react-icons": "^5.3.0",
+    "sharp": "^0.33.5",
     "stripe": "^17.5.0",
     "svix": "^1.45.1",
     "tailwind-merge": "^2.5.5",
