--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-pdf/renderer": "^4.2.2",
     "@tabler/icons-react": "^3.12.0",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
