--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
-    "@react-pdf/renderer": "^4.2.2",
     "@tabler/icons-react": "^3.12.0",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "concurrently": "^9.1.1",
     "framer-motion": "^11.3.27",
+    "jspdf": "^3.0.0",
     "lucide-react": "^0.462.0",
     "mini-svg-data-uri": "^1.4.4",
     "mongodb": "^6.12.0",
